--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.1.0</version>
+		<relativePath/>
 	</parent>
 
 	<properties>
@@ -24,7 +24,6 @@
 		<java.version>1.8</java.version>
 		<tomcat.port>9081</tomcat.port>
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
-	    <file>readme</file>
 		<lombok.version>1.18.10</lombok.version>
 	</properties>
 
@@ -64,7 +63,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.7.RELEASE</version>
+			<version>1.1.1.RELEASE</version>
 		</dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
         <dependency>
@@ -105,7 +104,6 @@
 			</plugin>
 			
 	         <plugin>
-		        <groupId>io.fabric8</groupId>
 		        <artifactId>docker-maven-plugin</artifactId>
 		        <extensions>true</extensions>
 		        
@@ -144,8 +142,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
