--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-security.oauth2.resource.filter-order=3
-
-security.signing-key=MaYzkSjmkzPC57L
-security.encoding-strength=256
-security.security-realm=Spring Boot JWT Example Realm
-
-security.jwt.client-id=testjwtclientid
-security.jwt.client-secret=XY7kmzoNzl100
-security.jwt.grant-type=password
-security.jwt.scope-read=read
-security.jwt.scope-write=write
-security.jwt.resource-ids=testjwtresourceid
+spring.main.allow-bean-definition-overriding=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+security.signing-key=test
+security.encoding-strength=10
+security.security-realm=test
