--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.22</lombok.version>
-		<spring-security-oauth2.version>2.5.1</spring-security-oauth2.version>
+		<spring-security-oauth2-autoconfigure.version>2.5.12</spring-security-oauth2-autoconfigure.version>
 		<jackson.version>2.12.4</jackson.version>
 		<spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
 
@@ -70,11 +70,11 @@
 			<artifactId>spring-security-jwt</artifactId>
 			<version>${spring-security-jwt.version}</version>
 		</dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure -->
         <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2.version}</version>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>${spring-security-oauth2-autoconfigure.version}</version>
         </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
