--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,11 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.30</lombok.version>
-		<spring-security-jwt.version>1.1.1</spring-security-jwt.version>
-		<spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
-		<jackson.version>2.15.2</jackson.version>
+		<spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
+		<jackson.version>2.14.2</jackson.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 		<docker-maven-plugin.version>0.43.0</docker-maven-plugin.version>
-
+		<jjwt.version>0.11.5</jjwt.version>
 
 	</properties>
 
@@ -68,12 +67,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-jwt</artifactId>
-			<version>${spring-security-jwt.version}</version>
-		</dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
@@ -91,6 +85,25 @@
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jjwt.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jjwt.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+
 
 	</dependencies>
 	<build>
